0821-Chocolate_custom_screen1

--- a/Customization.html
+++ b/Customization.html
@@ -12,19 +12,25 @@
     <main id="main">
         <div id="menu">
             <ul id="menu_id">
-                <li id="menu_id_li"><a href="#">HOME</a></li>
-                <li id="menu_id_li"><a href="#">SHOP</a></li>
-                <li id="menu_id_li"><a href="#">ABOUT</a></li>
-                <li id="menu_id_li"><a href="#">NEWS</a></li>
-                <li id="menu_id_li"><a href="#">Q&A</a></li>
-                <li><a href="#" id="customized">
-                        <p>customized</p>
-                    </a></li>
-                <li><a href="#"><img src="./images/Custom_block/menu/material-symbols-light_search.svg" alt=""></a></li>
-                <li><a href="#"><img src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg"
-                            alt=""></a></li>
-                <li><a href="#"><img src="./images/Custom_block/menu/Vector.svg" alt=""></a></li>
-            </ul>
+                <div id="menu_id_menu">
+                    <li id="menu_id_li"><a href="#">HOME</a></li>
+                    <li id="menu_id_li"><a href="#">SHOP</a></li>
+                    <li id="menu_id_li"><a href="#">ABOUT</a></li>
+                    <li id="menu_id_li"><a href="#">NEWS</a></li>
+                    <li id="menu_id_li"><a href="#">Q&A</a></li>
+                    <li id="menu_id_menu_icon"><a href="#" id="customized">
+                            <p>customized</p>
+                        </a></li>
+                </div>
+                <div id="menu_id_icon">
+                    <li><a href="#"><img src="./images/Custom_block/menu/material-symbols-light_search.svg" alt=""></a>
+                    </li>
+                    <li id="menu_id_icon_show"><a href="#"><img
+                                src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg" alt=""></a>
+                    </li>
+                    <li><a href="#"><img src="./images/Custom_block/menu/Vector.svg" alt=""></a></li>
+                </div>
+            </ul>x
         </div>
         <div id="all">
             <div id="left_sidebar">
@@ -56,43 +62,43 @@
                         <ul>
                             <li>
                                 <a href="#" class="left_menu_img1">
-                                    <img src="./images/Custom_block/left_menu/first_floor/Frame 110.svg" alt="">
-                                    <p>牛奶巧克力</p>
+                                    <img id="milk_chocolate" src="./images/Custom_block/left_menu/first_floor/Frame 1.svg" alt="">
+                                    <!-- <p>牛奶巧克力</p> -->
                                     </img>
                                 </a>
                             </li>
                             <li>
                                 <a href="#" class="left_menu_img2">
-                                    <img src="./images/Custom_block/left_menu/first_floor/Ellipse 2.svg" alt="">
-                                    <p>黑巧克力</p>
+                                    <img id="dark_chocolate" src="./images/Custom_block/left_menu/first_floor/Ellipse 2.svg" alt="">
+                                    <!-- <p>黑巧克力</p> -->
                                     </img>
                                 </a>
                             </li>
                             <li>
                                 <a href="#" class="left_menu_img3">
-                                    <img src="./images/Custom_block/left_menu/first_floor/Ellipse 3.svg" alt="">
-                                    <p>白巧克力</p>
+                                    <img id="white_chocolate" src="./images/Custom_block/left_menu/first_floor/Ellipse 3.svg" alt="">
+                                    <!-- <p>白巧克力</p> -->
                                     </img>
                                 </a>
                             </li>
                             <li>
                                 <a href="#" class="left_menu_img4">
-                                    <img src="./images/Custom_block/left_menu/first_floor/Ellipse 4.svg" alt="">
-                                    <p>草莓巧克力</p>
+                                    <img id="strawberry_chocolate" src="./images/Custom_block/left_menu/first_floor/Ellipse 4.svg" alt="">
+                                    <!-- <p>草莓巧克力</p> -->
                                     </img>
                                 </a>
                             </li>
                             <li>
                                 <a href="#" class="left_menu_img5">
-                                    <img src="./images/Custom_block/left_menu/first_floor/Ellipse 5.svg" alt="">
-                                    <p>抹茶巧克力</p>
+                                    <img id="matcha_chocolate" src="./images/Custom_block/left_menu/first_floor/Ellipse 5.svg" alt="">
+                                    <!-- <p>抹茶巧克力</p> -->
                                     </img>
                                 </a>
                             </li>
                             <li>
                                 <a href="#" class="left_menu_img6">
-                                    <img src="./images/Custom_block/left_menu/first_floor/Ellipse 6.svg" alt="">
-                                    <p>焦糖巧克力</p>
+                                    <img id="caramel_chocolate" src="./images/Custom_block/left_menu/first_floor/Ellipse 6.svg" alt="">
+                                    <!-- <p>焦糖巧克力</p> -->
                                     </img>
                                 </a>
                             </li>
@@ -312,6 +318,15 @@
                         <div id="middle_div1_box_div4"></div>
                         <div id="middle_div1_box_div5"></div>
                         <div id="middle_div1_box_div6"></div>
+                        <div id="middle_div1_box_div7"></div>
+                        <div id="middle_div1_box_div8"></div>
+                        <div id="middle_div1_box_div9"></div>
+                        <div id="middle_div1_box_div10"></div>
+                        <div id="middle_div1_box_div11"></div>
+                        <div id="middle_div1_box_div12"></div>
+                        <div id="middle_div1_box_div13"></div>
+                        <div id="middle_div1_box_div14"></div>
+                        <div id="middle_div1_box_div15"></div>
                     </div>
                 </div>
                 <div class="middle_box">
@@ -395,7 +410,7 @@
                         <!-- <p>選擇卡片</p> -->
                     </li>
                     <li id="Prompt_field_img5">
-                        <a href="#">
+                        <a href="./Customization_two_page.html">
                             <!-- <p>下一步</p>
                             </a>
                         </li>
