--- a/Customization_three_page.html
+++ b/Customization_three_page.html
@@ -177,13 +177,13 @@
         <div id="Prompt_field">
             <div>
                 <ul>
-                    <li id="Prompt_field_img0"><img src="./images/Custom_block/Prompt_field/Frame 30.svg " alt=""></li>
+                    <li id="Prompt_field_img0"><a href="./Customization_two_page.html"><img src="./images/Custom_block/Prompt_field/Frame 30.svg " alt=""></a></li>
                     <li id="Prompt_field_img1"><img src="./images/Custom_block/Prompt_field/Frame 31.svg" alt=""></li>
                     <li id="Prompt_field_img2"><img src="./images/Custom_block/Prompt_field/Frame 2.svg" alt=""></li>
                     <li id="Prompt_field_img3"><img src="./images/Custom_block/box/left_sidebar/Frame 27.svg" alt="">
                     </li>
                     <li id="Prompt_field_img4"><img src="./images/Custom_block/Prompt_field/Frame 4.svg" alt=""></li>
-                    <li id="Prompt_field_img5"><img src="./images/Custom_block/Prompt_field/Group 5.svg" alt=""></li>
+                    <li id="Prompt_field_img5"><a href="./Customization_four_page.html"><img src="./images/Custom_block/Prompt_field/Group 5.svg" alt=""></a></li>
                 </ul>
             </div>
         </div>
