--- a/Customization_two_page.html
+++ b/Customization_two_page.html
@@ -27,7 +27,7 @@
         <div id="all">
             <div id="left_sidebar_second_page">
                 <ul>
-                    <li class="left_sidebar_img"><a href="#"><img
+                    <li class="left_sidebar_img" id="left_sidebar_img_1"><a href="#"><img
                                 src="./images/Custom_block/small_chocolate/left_sidebar/Frame 1-1.svg" alt="">
                             <p>口味</p>
                         </a></li>
@@ -35,7 +35,7 @@
                                 src="./images/Custom_block/small_chocolate/left_sidebar/Frame 2-2.svg" alt="">
                             <p>內餡</p>
                         </a></li>
-                    <li class="left_sidebar_img"><a href="#"><img
+                    <li class="left_sidebar_img" id="left_sidebar_img_3"><a href="#"><img
                                 src="./images/Custom_block/small_chocolate/left_sidebar/Frame 3-3.svg" alt="">
                             <p>模板</p>
                         </a></li>
@@ -189,7 +189,7 @@
         <div id="Prompt_field">
             <div>
                 <ul>
-                    <li id="Prompt_field_img0"><img src="./images/Custom_block/Prompt_field/Frame 30.svg " alt=""></li>
+                    <li id="Prompt_field_img0"><a href="./Customization.html"><img src="./images/Custom_block/Prompt_field/Frame 30.svg " alt=""></a></li>
                     <li id="Prompt_field_img1" class="Prompt_field"><img
                             src="./images/Custom_block/Prompt_field/Frame 31.svg" alt=""></li>
                     <li id="Prompt_field_img2" class="Prompt_field"><img
@@ -198,11 +198,12 @@
                             src="./images/Custom_block/Prompt_field/Frame 3.svg" alt=""></li>
                     <li id="Prompt_field_img4" class="Prompt_field"><img
                             src="./images/Custom_block/Prompt_field/Frame 4.svg" alt=""></li>
-                    <li id="Prompt_field_img5"><img src="./images/Custom_block/Prompt_field/Group 5.svg" alt=""></li>
+                    <li id="Prompt_field_img5"><a href="./Customization_three_page.html"><img src="./images/Custom_block/Prompt_field/Group 5.svg" alt=""></a></li>
                 </ul>
             </div>
         </div>
     </main>
+    <script src="./js/Customization_two.js"></script>
 </body>
 
 </html>
