--- a/shop.html
+++ b/shop.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/shop.css">
     <title>SHOP 商品頁</title>
+    <!-- react CDN bable-->
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <!-- 引用footer -->
+    <script type="text/babel" src="./Footer.jsx"></script>
+    <link rel="stylesheet" href="./css/Footer.css">
+
+
 </head>
 
 <body>
@@ -18,7 +27,8 @@
             <div id="filter" class="filter">
                 <div class="filter_list">
                     <ul class="drop-down-menu">
-                        <li id="festivalBtn"><img class="BtnPic" src="./images/shop_images/filter_btn1_down.svg" alt=""/>
+                        <li id="festivalBtn"><img class="BtnPic" src="./images/shop_images/filter_btn1_down.svg"
+                                alt="" />
                             <ul id="festivalList">
                                 <li><a href="#">情人節</a>
                                 </li>
@@ -30,7 +40,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li id="countsBtn"><img class="BtnPic" src="./images/shop_images/filter_btn2_down.svg" alt=""/>
+                        <li id="countsBtn"><img class="BtnPic" src="./images/shop_images/filter_btn2_down.svg" alt="" />
                             <ul id="countsList">
                                 <li><a href="#">4入</a>
                                 </li>
@@ -42,7 +52,7 @@
                                 </li>
                             </ul>
                         </li>
-                        <li id="priceBtn"><img class="BtnPic" src="./images/shop_images/filter_btn3_down.svg" alt=""/>
+                        <li id="priceBtn"><img class="BtnPic" src="./images/shop_images/filter_btn3_down.svg" alt="" />
                             <ul id="priceList">
                                 <li><a href="#">500元以下</a>
                                 </li>
@@ -165,28 +175,20 @@
         </section>
 
     </main>
-    <footer>
-        <div class="wrap">
-            <a class="logo" href="#"><img src="./images/footer_logo.svg" alt=""></a>
-            <div class="bottom_nav">
-                <ul class="menu">
-                    <li><a href="./index.html" id="home">首頁</a></li>
-                    <li><a href="#" id="news">最新消息</a></li>
-                    <li><a href="./shop.html" id="shop">商品一覽</a></li>
-                    <li><a href="#" id="about">關於我們</a></li>
-                    <li><a href="#" id="Q&A">Q&A</a></li>
-                    <li><a href="#" id="shopping_car">購物車</a></li>
-                    <li><a href="#" id="member">會員專區</a></li>
-                </ul>
-            </div>
-            <div class="icon">
-                <a class="fb" href="#"></a>
-                <a class="ig" href="#"></a>
-                <a class="x" href="#"></a>
-            </div>
-        </div>
-        <div class="copyRight">© Mélange. All Rights Reserved.</div>
-    </footer>
+    <!-- footer -->
+    <div id="footer"></div>
+    <script type="text/babel">
+        function App() {
+            return (
+                <Footer />
+            )
+        }
+        ReactDOM
+        .createRoot(document.getElementById('footer'))
+        .render(<App />);
+    </script>
+
+    <!-- js -->
     <script src="./js/shop.js"></script>
 </body>
 
