--- a/Customization_three_page.html
+++ b/Customization_three_page.html
@@ -27,7 +27,7 @@
         <div id="all">
             <div id="left_sidebar_second_page">
                 <ul>
-                    <li class="left_sidebar_img"><a href="#"><img
+                    <li class="left_sidebar_img" id="left_sidebar_img_1"><a href="#"><img
                                 src="./images/Custom_block/small_chocolate/left_sidebar/Frame 1-2.svg" alt="">
                             <p>樣式</p>
                         </a></li>
@@ -35,7 +35,7 @@
                                 src="./images/Custom_block/small_chocolate//left_sidebar/Frame 2-3.svg" alt="">
                             <p>顏色</p>
                         </a></li>
-                    <li class="left_sidebar_img"><a href="#"><img
+                    <li class="left_sidebar_img" id="left_sidebar_img_3"><a href="#"><img
                                 src="./images/Custom_block/small_chocolate/left_sidebar/Frame 3-4.svg" alt="">
                             <p>緞帶</p>
                         </a>
@@ -130,10 +130,10 @@
             <div id="right_sidebar_second_page">
                 <div>
                     <ul>
-                        <li><a href=""><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 28.svg"
-                                    alt="" class="right_sidebar_img"></a></li>
-                        <li><a href=""><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 29.svg"
-                                    alt="" class="right_sidebar_img"></a></li>
+                        <li><a href=""><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 28.svg" alt=""
+                                    class="right_sidebar_img"></a></li>
+                        <li><a href=""><img src="./images/Custom_block/small_chocolate/left_sidebar/Frame 29.svg" alt=""
+                                    class="right_sidebar_img"></a></li>
                     </ul>
                 </div>
             </div>
@@ -177,17 +177,20 @@
         <div id="Prompt_field">
             <div>
                 <ul>
-                    <li id="Prompt_field_img0"><a href="./Customization_two_page.html"><img src="./images/Custom_block/Prompt_field/Frame 30.svg " alt=""></a></li>
+                    <li id="Prompt_field_img0"><a href="./Customization_two_page.html"><img
+                                src="./images/Custom_block/Prompt_field/Frame 30.svg " alt=""></a></li>
                     <li id="Prompt_field_img1"><img src="./images/Custom_block/Prompt_field/Frame 31.svg" alt=""></li>
                     <li id="Prompt_field_img2"><img src="./images/Custom_block/Prompt_field/Frame 2.svg" alt=""></li>
                     <li id="Prompt_field_img3"><img src="./images/Custom_block/box/left_sidebar/Frame 27.svg" alt="">
                     </li>
                     <li id="Prompt_field_img4"><img src="./images/Custom_block/Prompt_field/Frame 4.svg" alt=""></li>
-                    <li id="Prompt_field_img5"><a href="./Customization_four_page.html"><img src="./images/Custom_block/Prompt_field/Group 5.svg" alt=""></a></li>
+                    <li id="Prompt_field_img5"><a href="./Customization_four_page.html"><img
+                                src="./images/Custom_block/Prompt_field/Group 5.svg" alt=""></a></li>
                 </ul>
             </div>
         </div>
     </main>
+    <script src="./js/Customization_three.js"></script>
 </body>
 
 </html>
