0822-Chocolate_custom_screen1

--- a/Customization.html
+++ b/Customization.html
@@ -121,17 +121,17 @@
                         <ul>
                             <li>
                                 <img src="./images/Custom_block/left_menu/second_floor/Ellipse 1.svg" alt=""
-                                    id="pistachio_img"> </img>
+                                    id="pistachio_img" draggable="true"> </img>
                                 <p>開心果</p>
                             </li>
                             <li>
-                                <img src="./images/Custom_block/left_menu/second_floor/Ellipse 2.svg" alt=""
-                                    id="almond_img_img"></img>
+                                <img src="./images/Custom_block/left_menu/second_floor/Ellipse_2.svg" alt=""
+                                    id="almond_img_img" draggable="true"></img>
                                 <p>杏仁</p>
                             </li>
                             <li>
                                 <img src="./images/Custom_block/left_menu/second_floor/Ellipse 3.svg" alt=""
-                                    id="dried_strawberries_img"> </img>
+                                    id="dried_strawberries_img" draggable="true"> </img>
                                 <p>南瓜籽</p>
                             </li>
                         </ul>
@@ -145,17 +145,17 @@
                             <ul>
                                 <li>
                                     <img src="./images/Custom_block/left_menu/second_floor/Ellipse 4.svg" alt=""
-                                        id="dried_orange_img"> </img>
+                                        id="dried_orange_img" draggable="true"> </img>
                                     <p>草莓乾</p>
                                 </li>
                                 <li>
                                     <img src="./images/Custom_block/left_menu/second_floor/Ellipse 5.svg" alt=""
-                                        id="dried_kiwi_fruit_img"> </img>
+                                        id="dried_kiwi_fruit_img" draggable="true"> </img>
                                     <p>柳橙乾</p>
                                 </li>
                                 <li>
                                     <img src="./images/Custom_block/left_menu/second_floor/Ellipse 6.svg" alt=""
-                                        id="dry_petals_img"> </img>
+                                        id="dry_petals_img" draggable="true"> </img>
                                     <p>奇異果乾</p>
                                 </li>
                             </ul>
